[project]
name = "simple-llm-agent"
version = "0.1.0"
description = "This is a library which contains boilerplate code/basic example of different ways to create your AI agent that uses custom tools and locally run llm model (ollama)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.9.2",
    "langchain>=0.3.26",
    "langchain-core>=0.3.67",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.5.0",
    "ollama>=0.5.1",
    "rich>=14.0.0",
    "typer[all]>=0.16.0",
]
